--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,10 +18,18 @@
         android:id="@+id/SecondFragment"
         android:name="com.example.greattodo.CreateFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/createfragment"/>
+        tools:layout="@layout/createfragment">
+        <action
+            android:id="@+id/action_SecondFragment_to_setting_Fragment"
+            app:destination="@id/setting_Fragment" />
+    </fragment>
     <fragment
         android:id="@+id/setting_Fragment"
         android:name="com.example.greattodo.Setting_Fragment"
         android:label="fragment_setting_"
-        tools:layout="@layout/fragmentsetting_" />
+        tools:layout="@layout/fragmentsetting_" >
+        <action
+            android:id="@+id/action_setting_Fragment_to_ListFragment"
+            app:destination="@id/ListFragment" />
+    </fragment>
 </navigation>
