--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,11 +21,7 @@
         android:id="@+id/createFragment"
         android:name="com.example.greattodo.CreateFragment"
         android:label="createfragment"
-        tools:layout="@layout/createfragment" >
-        <action
-            android:id="@+id/action_createFragment_to_listFragment"
-            app:destination="@id/listFragment" />
-    </fragment>
+        tools:layout="@layout/createfragment" />
     <fragment
         android:id="@+id/setting_Fragment"
         android:name="com.example.greattodo.Setting_Fragment"
