--- a/app/src/main/res/layout/createfragment.xml
+++ b/app/src/main/res/layout/createfragment.xml
@@ -43,7 +43,8 @@
         app:layout_constraintEnd_toEndOf="@+id/et_description"
         app:layout_constraintEnd_toStartOf="@+id/spinner_priority"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <Spinner
         android:id="@+id/spinner_priority"
