--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="yellow">#DCE775</color>
     <color name="blue">#4FC3F7</color>
     <color name="green">#4DB6AC</color>
+    <color name="grey">#57605F</color>
 </resources>
