--- a/app/src/main/res/layout/createfragment.xml
+++ b/app/src/main/res/layout/createfragment.xml
@@ -51,7 +51,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btm_high" />
 
-    <View
+    <Button
         android:id="@+id/red"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -59,9 +59,11 @@
         style="@style/Circle"
         android:background="@drawable/backgraund_sickle_red"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_description" />
+        app:layout_constraintTop_toBottomOf="@+id/et_description"
+        android:clickable="true"
+        android:focusable="true" />
 
-    <View
+    <Button
         android:id="@+id/yellow"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -69,7 +71,9 @@
         style="@style/Circle"
         android:background="@drawable/backgraund_sickle_yellow"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/red"/>
+        app:layout_constraintTop_toBottomOf="@+id/red"
+        android:clickable="true"
+        android:focusable="true" />
 
     <View
         android:id="@+id/blue"
@@ -79,7 +83,9 @@
         style="@style/Circle"
         android:background="@drawable/backgraund_sickle_blue"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yellow"/>
+        app:layout_constraintTop_toBottomOf="@+id/yellow"
+        android:clickable="true"
+        android:focusable="true" />
 
     <View
         android:id="@+id/green"
@@ -89,7 +95,9 @@
         style="@style/Circle"
         android:background="@drawable/backgraund_sickle_green"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/blue"/>
+        app:layout_constraintTop_toBottomOf="@+id/blue"
+        android:clickable="true"
+        android:focusable="true" />
 
     <View
         android:id="@+id/white"
@@ -99,7 +107,9 @@
         style="@style/Circle"
         android:background="@drawable/backgraund_sickle_grey"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/green"/>
+        app:layout_constraintTop_toBottomOf="@+id/green"
+        android:clickable="true"
+        android:focusable="true" />
 
 
     <Button
