--- a/app/src/main/res/layout/list_first.xml
+++ b/app/src/main/res/layout/list_first.xml
@@ -8,9 +8,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="46dp" />
+        android:layout_height="600dp"
+        android:id="@+id/recycler"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/todo_item"
+        tools:ignore="MissingConstraints" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btm_create"
